@@ -30,6 +30,7 @@ include_dotfiles = 1
 -bundle = @MIKKOI
 -version = 0.003
 -remove = GatherDir
+-remove = Test::Perl::Critic
 
 [Software::Policies / License]
 policy_attribute = perl_5_double_license = true
